bug fixes: getting rid of tray, scrollbar pre-installing important package

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     display: flex;
     background-color: black;
